<resources>
    <string name="app_name">Forecastica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close  Navigation Drawer</string>
    <string name="allTimeOfTheDay">All Time Of The Day</string>
    <string name="country_name">Country Name</string>
    <string name="slash">/</string>
    <string name="maxTemp">60.0º</string>
    <string name="minTemp">32.0º</string>
    <string name="pressure">Pressure</string>
    <string name="zero">0</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="cloud">Cloud</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="no_places">no places</string>
    <string name="from_time">From Time</string>
    <string name="to_time">To Time</string>
    <string name="dash">-</string>
    <string name="submit">Submit</string>
    <string name="MeterPerSecond">m/s</string>
    <string name="MilePerHour">mm/h</string>
    <string name="Celsius">°C</string>
    <string name="Fahrenheit">F</string>
    <string name="Kelvin">K</string>
    <string name="pascal">Pascal</string>
    <string name="add_to_favourite">Add To Favourite</string>
    <string name="save_location">Save Location</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="todo">TODO</string>
    <string name="from_date">From Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_date">add date</string>
    <string name="time">Time</string>
    <string name="add_time">add time</string>
    <string name="save_alert">Save Alert</string>
    <string name="cancel">Cancel</string>
    <string name="to_date">to_Date</string>
    <string name="no_alert_weather_is_fine">No Alert the weather is fine</string>
    <string name="ok">OK</string>
    <string name="alarm_description">alarm description</string>
    <string name="country">Country</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="features">permission</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="checkInternet">You\'re offline, Check Internet Connection</string>
    <string name="alarm">Alarm</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="enter_date_time">You have to set both date and time</string>
    <string name="info">Info</string>
    <string name="alert_added_successfully">The alert added successfully</string>
    <string name="setup_alert">Setup Alert</string>
    <string name="yes">Yes</string>
    <string name="add_location">Add Location</string>



</resources>