<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/alarm_card"
    android:elevation="20dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center|top"
        android:gravity="center|top">

    <androidx.cardview.widget.CardView
        style="@style/custom_textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/secondary_color"
        app:cardCornerRadius="25dp"
        android:layout_gravity="center|top"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:orientation="horizontal"
            android:background="@drawable/rounded_rectangle"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:src="@drawable/icon"/>

            <TextView
                android:id="@+id/appName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/txt_alarm_country"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:text="@string/country"
        android:padding="5dp"
        android:textColor="#676666"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/txt_alarm_desc"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:text="@string/alarm_description"
        android:padding="5dp"
        android:textColor="#676666"
        android:textSize="20sp"
        />



    <Button
        android:id="@+id/btn_ok_alarm"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:text="@string/ok"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        />
    </LinearLayout>

</androidx.cardview.widget.CardView>