<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="25dp"
    android:layout_gravity="center"
    android:layout_marginEnd="10dp">
    <TextView
        android:id="@+id/textView"
        style="@style/custom_textView"
        android:layout_width="140dp"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/custom_textView"
        android:layout_width="140dp"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_from"
        style="@style/custom_textView"
        android:layout_width="140dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ripple_effect"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/from_date"
            style="@style/custom_textView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:hint="@string/add_date"
            android:padding="3dp"
            android:textColor="#676666"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_to"
        style="@style/custom_textView"
        android:layout_width="140dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/ripple_effect"
        android:elevation="20dp"
        android:clickable="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_from"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/card_from"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/to_date"
            style="@style/custom_textView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:hint="@string/add_date"
            android:padding="3dp"
            android:textColor="#676666"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        style="@style/custom_textView"
        android:layout_width="280dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_rectangle"

        android:gravity="center"
        android:padding="10dp"
        android:text="@string/time"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_from" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_time"
        style="@style/custom_textView"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/ripple_effect"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/time"
            style="@style/custom_textView"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="@string/add_time"
            android:padding="5dp"
            android:textColor="#676666"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/location_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="22dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"

        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/card_time"
        app:layout_constraintStart_toStartOf="@+id/card_time"
        app:layout_constraintTop_toBottomOf="@+id/card_time">

        <FrameLayout
            android:id="@+id/location_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue">


            <RadioGroup
                android:id="@+id/alert_type_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <RadioButton
                    android:id="@+id/notif_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:buttonTint="@color/secondary_color"
                    android:checked="true"
                    android:enabled="true"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/alarm_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:buttonTint="@color/secondary_color"
                    android:text="@string/alarm"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RadioGroup>


        </FrameLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_alert"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="15dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/secondary_color"
        android:gravity="center"
        android:text="@string/save_alert"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_card_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_alert"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_save_alert" />

</androidx.constraintlayout.widget.ConstraintLayout>