<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/language_card_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"

            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/day_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue">


                <TextView

                    android:id="@+id/txt_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/language_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_language"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_language"
                    app:layout_constraintTop_toTopOf="@+id/txt_language"
                    app:layout_constraintVertical_bias="0.523">

                    <RadioButton
                        android:id="@+id/english_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:checked="false"
                        android:buttonTint="@color/secondary_color"
                        android:text="@string/english"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/arabic_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:buttonTint="@color/secondary_color"
                        android:text="@string/arabic"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/notification_card_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notification_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue">


                <TextView

                    android:id="@+id/txt_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/notifications"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/notification_switch"
                    style="@style/Widget.AppCompat.CompoundButton.Switch"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginEnd="28dp"
                    app:trackTint="@color/switch_track_selector"
                    app:thumbTint="@color/switch_thumb_selector"
                    android:checked="true"
                    android:enabled="true"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_notification"
                    app:layout_constraintTop_toTopOf="@+id/txt_notification">

                </com.google.android.material.materialswitch.MaterialSwitch>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="1dp"
            android:background="#C8C7C7"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/location_card_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue">


                <TextView

                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/location_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.787"
                    app:layout_constraintStart_toEndOf="@+id/txt_location"
                    app:layout_constraintTop_toTopOf="@+id/txt_location"
                    app:layout_constraintVertical_bias="0.523">

                    <RadioButton
                        android:id="@+id/gps_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:checked="false"
                        android:buttonTint="@color/secondary_color"
                        android:text="@string/gps"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/map_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/map"
                        android:buttonTint="@color/secondary_color"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/temperature_card_view"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/temperature_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue">


                <TextView

                    android:id="@+id/txt_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/temperature"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/temperature_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_temperature"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txt_temperature"
                    app:layout_constraintTop_toBottomOf="@+id/txt_temperature">

                    <RadioButton
                        android:id="@+id/celsius_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:checked="false"
                        android:buttonTint="@color/secondary_color"
                        android:text="@string/celsius"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/kelvin_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/kelvin"
                        android:buttonTint="@color/secondary_color"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/fahrenheit_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/fahrenheit"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:buttonTint="@color/secondary_color"
                        />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/windSpeed_card_view"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wind_speed_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_blue">


                <TextView

                    android:id="@+id/txt_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.082" />

                <RadioGroup
                    android:id="@+id/wind_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_wind_speed"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txt_wind_speed">

                    <RadioButton
                        android:id="@+id/meter_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:checked="false"
                        android:text="@string/meter_sec"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:buttonTint="@color/secondary_color" />

                    <RadioButton
                        android:id="@+id/mile_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/mile_hour"
                        android:textColor="@color/white"
                        android:buttonTint="@color/secondary_color"
                        android:textSize="18sp" />
                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>




</LinearLayout>